first basic unit test passing, but there is no thread safety

--- a/src/HashedWheelTimer/HashedWheelTimers.csproj
+++ b/src/HashedWheelTimer/HashedWheelTimers.csproj
@@ -40,9 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HashedWheelTimer.cs" />
+    <Compile Include="ITimer.cs" />
     <Compile Include="TimeBucket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeoutElement.cs" />
+    <Compile Include="Timer.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
