--- a/src/HashedWheelTimer.Tests/HashedWheelTimers.Tests.csproj
+++ b/src/HashedWheelTimer.Tests/HashedWheelTimers.Tests.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IsPowerOfTwoTests.cs" />
     <Compile Include="WhenSchedulingTimeouts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
