abstracting timer implementations

--- a/src/HashedWheelTimer.Tests/HashedWheelTimers.Tests.csproj
+++ b/src/HashedWheelTimer.Tests/HashedWheelTimers.Tests.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IsPowerOfTwoTests.cs" />
+    <Compile Include="WhenCancellingTimers.cs" />
     <Compile Include="WhenSchedulingTimeouts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
