--- a/src/HashedWheelTimer/HashedWheelTimers.csproj
+++ b/src/HashedWheelTimer/HashedWheelTimers.csproj
@@ -40,12 +40,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HashedWheelTimer.cs" />
-    <Compile Include="ITimer.cs" />
-    <Compile Include="TimeBucket.cs" />
+    <Compile Include="Timeout.cs" />
+    <Compile Include="Timers\ITimer.cs" />
+    <Compile Include="HashedWheelTimerBucket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TimeoutElement.cs" />
+    <Compile Include="ICancellable.cs" />
+    <Compile Include="Timers\MultiMediaBasedTimer.cs" />
+    <Compile Include="Timers\ThreadingBasedTimer.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
